<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.debajyotibasak.profilepage.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </android.support.v7.widget.Toolbar>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imv_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_profile_pic"
        app:civ_border_width="2dp"
        app:civ_border_color="@android:color/white"/>

    <LinearLayout
        android:id="@+id/lay_bottom_info"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="4">

        <ImageView
            android:id="@+id/imv_account"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="12dp"
            android:src="@drawable/ic_person" />

        <ImageView
            android:id="@+id/imv_message"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="12dp"
            android:src="@drawable/ic_message" />

        <ImageView
            android:id="@+id/imv_likes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="12dp"
            android:src="@drawable/ic_thumb_up" />

        <ImageView
            android:id="@+id/imv_share"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="12dp"
            android:src="@drawable/ic_share" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_follow"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/imv_profile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_follow_button"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/follow_button"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txv_profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/btn_follow"
        android:layout_marginTop="26dp"
        android:text="@string/profile_name"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/txv_profile_name"
        android:text="@string/person_email"
        android:textColor="@android:color/white"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/txv_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/txv_email"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/profile_info"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textSize="14sp" />


</RelativeLayout>
